# digital-twin

./: .gitignore  README.md
.github/workflows/: deploy.yml  destroy.yml
backend/: pyproject.toml
backend/data/: summary.txt
frontend/: package-lock.json
frontend/components/: twin.tsx
scripts/: deploy.ps1  deploy.sh  deploy_bkp.ps1  destroy.sh
terraform/: main.tf
week2/: day5.md
