[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "openai>=2.15.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "uvicorn>=0.40.0",
    "boto3>=1.26.0",
    "botocore>=1.29.0",
    "pypdf>=6.6.2",
    "mangum>=0.20.0",
]
